--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -29,3 +29,5 @@ jobs:
         git add k8s/base/deployment.yaml
         git commit -m "Update image tag to ${{ github.sha }}"
         git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
