--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Update Kustomize manifest
       run: |
         sed -i "s|image: platof/argocd-test-app:.*|image: platof/argocd-test-app:${{ github.sha }}|g" k8s/base/deployment.yaml
-        git config user.name "platof"
-        git config user.email "femmie009@yahoo.com"
+        git config user.name "GitHub Actions"
+        git config user.email "actions@github.com"
         git add k8s/base/deployment.yaml
         git commit -m "Update image tag to ${{ github.sha }}"
         git push
