--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,17 +23,17 @@ jobs:
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Build Docker image
-      run: docker build -t your-docker-user/your-app:${VERSION} .
+      run: docker build -t platof/argocd-test-app:${VERSION} .
 
     - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Push Docker image
-      run: docker push your-docker-user/your-app:${VERSION}
+      run: docker push platof/argocd-test-app:${VERSION}
 
     - name: Update Kustomize manifest
       run: |
-        sed -i "s|image: your-docker-user/your-app:.*|image: your-docker-user/your-app:${VERSION}|g" k8s/base/deployment.yaml
+        sed -i "s|image: platof/argocd-test-app:.*|image: platof/argocd-test-app:${VERSION}|g" k8s/base/deployment.yaml
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
         git add k8s/base/deployment.yaml
