--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -19,21 +19,23 @@ jobs:
       id: pkg
       run: |
         VERSION=$(jq -r .version package.json)
-        echo "Extracted version: $VERSION"
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        TAG="${VERSION}-sha.${GITHUB_SHA:0:7}"
 
     - name: Build Docker image
-      run: docker build -t platof/argocd-test-app:${VERSION} .
+      run: docker build -t platof/argocd-test-app:${TAG} .
 
     - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
+    - name: Set Git remote to use PAT
+      run: git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
+
     - name: Push Docker image
-      run: docker push platof/argocd-test-app:${VERSION}
+      run: docker push platof/argocd-test-app:${TAG}
 
     - name: Update Kustomize manifest
       run: |
-        sed -i "s|image: platof/argocd-test-app:.*|image: platof/argocd-test-app:${VERSION}|g" k8s/base/deployment.yaml
+        sed -i "s|image: platof/argocd-test-app:.*|image: platof/argocd-test-app:${TAG}|g" k8s/base/deployment.yaml
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
         git add k8s/base/deployment.yaml
