--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -32,17 +32,17 @@ jobs:
     - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    - name: Set Git remote to use PAT
-      run: git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
-
     - name: Push Docker image
       run: docker push platof/argocd-test-app:${{ env.TAG }}
 
+    - name: Set Git remote to use PAT
+      run: git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
+
     - name: Update Kustomize manifest
       run: |
-        sed -i "s|image: platof/argocd-test-app:.*|image: platof/argocd-test-app:${{ env.TAG }}|g" k8s/base/deployment.yaml
+        sed -i "s|image: platof/argocd-test-app:.*|image: platof/argocd-test-app:${TAG}|g" k8s/base/deployment.yaml
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
         git add k8s/base/deployment.yaml
-        git commit -m "Update image tag to ${VERSION}"
-        git push
+        git commit -m "Update image tag to ${TAG}"
+        git push origin HEAD:main
