--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -36,7 +36,9 @@ jobs:
       run: docker push platof/argocd-test-app:${{ env.TAG }}
 
     - name: Set Git remote to use PAT
-      run: git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
+      run: | 
+        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
+        git remote -v
 
     - name: Update Kustomize manifest
       run: |
