--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -13,6 +13,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
+        token: ${{ secrets.GH_PAT }}
         fetch-depth: 0  # Full history in case you want to tag
 
     - name: Extract version from package.json
