--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -38,11 +38,11 @@ jobs:
     - name: Push Docker image
       run: docker push platof/argocd-test-app:${{ env.TAG }}
 
-    - name: Update Kustomize manifest
-      run: |
-        sed -i "s|image: platof/argocd-test-app:.*|image: platof/argocd-test-app:${TAG}|g" k8s/base/deployment.yaml
-        git config user.name "GitHub Actions"
-        git config user.email "actions@github.com"
-        git add k8s/base/deployment.yaml
-        git commit -m "Update image tag to ${TAG}"
-        git push origin HEAD:main
+#    - name: Update Kustomize manifest
+#      run: |
+#        sed -i "s|image: platof/argocd-test-app:.*|image: platof/argocd-test-app:${TAG}|g" k8s/base/deployment.yaml
+#        git config user.name "GitHub Actions"
+#        git config user.email "actions@github.com"
+#        git add k8s/base/deployment.yaml
+#        git commit -m "Update image tag to ${TAG}"
+#        git push origin HEAD:main
