--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -4,45 +4,19 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - 'k8s/base/deployment.yaml'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-      with:
-        token: ${{ secrets.GH_PAT }}
-        fetch-depth: 0  # Full history in case you want to tag
-
-    - name: Extract version from package.json
-      id: pkg
-      run: |
-        VERSION=$(jq -r .version package.json)
-        SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-7)
-        TAG="${VERSION}-sha.${SHORT_SHA}"
-        echo "VERSION=$VERSION"
-        echo "TAG=$TAG"
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
-        echo "TAG=$TAG" >> $GITHUB_ENV
 
     - name: Build Docker image
-      run: docker build -t platof/argocd-test-app:${{ env.TAG }} .
+      run: docker build -t platof/argocd-test-app:${{ github.sha }} .
 
-    - name: Login to Docker Hub
+    - name: Login to Docker
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Push Docker image
-      run: docker push platof/argocd-test-app:${{ env.TAG }}
-
-#    - name: Update Kustomize manifest
-#      run: |
-#        sed -i "s|image: platof/argocd-test-app:.*|image: platof/argocd-test-app:${TAG}|g" k8s/base/deployment.yaml
-#        git config user.name "GitHub Actions"
-#        git config user.email "actions@github.com"
-#        git add k8s/base/deployment.yaml
-#        git commit -m "Update image tag to ${TAG}"
-#        git push origin HEAD:main
+      run: docker push platof/argocd-test-app:${{ github.sha }}
