--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: argocd-test
-        image: platof/argocd-test-app:4.2.2-sha.40506be
+        image: platof/argocd-test-app:sha-5dbd0d1
         ports:
         - containerPort: 8080
