--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: argocd-test
-        image: docker.io/platof/argocd-test-app:sha-5dbd0d1
+        image: docker.io/platof/argocd-test-app:4.2.2-sha.ddf6091
         ports:
         - containerPort: 8080
