--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -17,6 +17,6 @@ spec:
       - name: ghcr-creds
       containers:
       - name: argocd-test
-        image: ghcr.io/platof/argocd-test-app:4.2.2-sha.ccfd045
+        image: ghcr.io/platof/argocd-test-app:latest
         ports:
         - containerPort: 8080
