added imagepull always

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -18,5 +18,6 @@ spec:
       containers:
       - name: argocd-test
         image: ghcr.io/platof/argocd-test-app:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
